--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             order: 'list', // 列表播放顺序
             volume: 0.8, // 默认音量
             listFolded: false, // 展开列表
-            listMaxHeight: '300px', // 限制最大高度
+            listMaxHeight: '200px', // 限制最大高度
             audio: [
                 {
                     name: '示情',
                     artist: '范文芳',
                     url: 'music/范文芳 - 示情.mp3',
-                    cover: 'https://www.example.com/cover1.jpg'
+                    cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '歌曲2',
                     artist: '歌手2',
                     url: 'https://www.example.com/song2.mp3',
-                    cover: 'https://www.example.com/cover2.jpg'
+                    cover: 'covers/IMG_3541.gif'
                 }
             ]
         });
