--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             loop: 'all', // 列表循环
             order: 'list', // 列表播放顺序
             volume: 0.8, // 默认音量
-            listFolded: false, // 展开列表
+            listFolded: true, // 展开列表
             listMaxHeight: '200px', // 限制最大高度
             audio: [
                 {
@@ -28,9 +28,57 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
-                    name: '歌曲2',
-                    artist: '歌手2',
-                    url: 'https://www.example.com/song2.mp3',
+                    name: '谁',
+                    artist: '洋澜一',
+                    url: 'music/洋澜一-谁.flac',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '时光旅行',
+                    artist: '大明',
+                    url: 'music/时光旅行.m4a',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '有你',
+                    artist: '大明',
+                    url: 'music/有你.m4a',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '浮在旅途中的人',
+                    artist: '大明',
+                    url: 'music/浮在旅途中的人.m4a',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '学到老爱到老',
+                    artist: '王先生',
+                    url: 'music/王先生 – 学到老爱到老.flac',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '舞女泪',
+                    artist: '韩宝仪',
+                    url: 'music/韩宝仪 – 舞女泪.flac',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '',
+                    artist: '',
+                    url: '',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '',
+                    artist: '',
+                    url: '',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '',
+                    artist: '',
+                    url: '',
                     cover: 'covers/IMG_3541.gif'
                 }
             ]
