--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         const ap = new APlayer({
             container: document.getElementById('aplayer'),
-            fixed: false, // 取消固定，支持自适应
+            fixed: true, // 取消固定，支持自适应
             autoplay: true, // 自动播放
             loop: 'all', // 列表循环
             order: 'list', // 列表播放顺序
