--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script>
         const ap = new APlayer({
             container: document.getElementById('aplayer'),
-            fixed: true, // 取消固定，支持自适应
+            fixed: false, // 取消固定，支持自适应
             autoplay: true, // 自动播放
             loop: 'all', // 列表循环
             order: 'list', // 列表播放顺序
             volume: 0.8, // 默认音量
             listFolded: true, // 展开列表
-            listMaxHeight: '200px', // 限制最大高度
+            listMaxHeight: '150px', // 限制最大高度
             audio: [
                 {
                     name: '示情',
