--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
-                    name: '',
-                    artist: '',
-                    url: '',
+                    name: '情人',
+                    artist: '杜德伟',
+                    url: 'https://image.cecily.eu.org:80/d/BQACAgEAAxkDAAIDzmft5S5rPStErUNOB1ncnUtweIX7AAI-BQACSlxxR1CBlB32qHBNNgQ',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
