--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
-                    name: '',
-                    artist: '',
-                    url: '',
+                    name: '舍得',
+                    artist: '王唯旖',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID0mft512nmV4avnktCoyhV7GlIVzoAAJCBQACSlxxRwyByzyRDRv9NgQ',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
