--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '无情画',
+                    artist: '王唯旖',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID4Gft6OlW8T95mylrGlMw68Ng9GhNAAJOBQACSlxxR1sBhlbm1LjqNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '九张机',
                     artist: '叶炫清',
                     url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID2Wft6BEpC3f1WUBFSuuGlg85sgABwwACSQUAAkpccUdKMc1T2x-AdTYE',
