--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '一个人生活',
+                    artist: '范文芳',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIERWft9sBencZyIvUjCMkLUrtJuG26AAKoBQACSlxxRypqcaCJtj5dNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '完美',
+                    artist: '王蓉'
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIESWft9247Qg18AdV42vfzXIcg7NXTAAKsBQACSlxxRyqTIdVprpfyNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '谁',
                     artist: '洋澜一',
                     url: 'music/洋澜一-谁.flac',
@@ -85,6 +97,120 @@
                     name: '九张机',
                     artist: '叶炫清',
                     url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID2Wft6BEpC3f1WUBFSuuGlg85sgABwwACSQUAAkpccUdKMc1T2x-AdTYE',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '诉月',
+                    artist: '刘惜君',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID4Gft6OlW8T95mylrGlMw68Ng9GhNAAJOBQACSlxxR1sBhlbm1LjqNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '爱死了昨天',
+                    artist: '李慧珍',
+                    url: 'https://image.cecily.eu.org:/d/BQACAgEAAxkDAAID7Wft6v83bcPdYPEe8P2ut6D_GsfWAAJZBQACSlxxRyqY1r3hWqWONgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '分飞',
+                    artist: '徐怀钰',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID8Wft60t7bCEMUJt9NqFuzyKY2X8RAAJcBQACSlxxR-29P8bYJprkNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '诀别诗',
+                    artist: '胡彦斌',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID9mft684_QP-zyMOcaU1u15Tw9vqaAAJPBQACvytxR8luIpQe1nY_NgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '搁浅',
+                    artist: '周杰伦',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID-mft7GGeeYTTp97kId3fROMZFEUQAAJiBQACSlxxR8G3WsEzQ6zgNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: 'The Bass',
+                    artist: '巴巴的贝',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEAWft7N__4Ce5hG4Y9V-0m_ELEMlBAAJpBQACSlxxR_2PTxy6ws2DNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '幻听',
+                    artist: '许嵩',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEBWft7XELUeABLG_m3TNMNkcg8Y-LAAJtBQACSlxxR59skwWhAdjQNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '浪人情歌',
+                    artist: '伍佰',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIECWft7f5oyfRVnTYpykVZ2uVK7bipAAJxBQACSlxxR2vUHBl1IgABPjYE',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '孤单北半球',
+                    artist: '欧得洋',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEDWft7mjOyyQT01Bk1sKVdX6yvXJuAAJ1BQACSlxxR4pDOvkTTBGnNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '不谓侠',
+                    artist: '萧忆情',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEEmft8V2nE1VbFVDULtAoSw6v6g4HAAJ6BQACSlxxRwjgYiMwaqNPNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '爱江山更爱美人',
+                    artist: '李丽芬',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEF2ft8csoqHtzEdxddAq8ECWtVCIkAAJ_BQACSlxxR8RqeJ7Y6-uDNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '美人鱼',
+                    artist: '林俊杰',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEHGft8wVWvcMl-z3j_hR6E6lvFkcdAAKEBQACSlxxR4G8oYwHKEqyNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '生死相随',
+                    artist: '王贰浪',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEImft81vatr26VTqyoF6D7838F0bnAAKHBQACSlxxR2FRuMf61k44NgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '座位',
+                    artist: '于冬然',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEKGft86pPwNYQTmYK_wABffV0Ik_I8QACjAUAAkpccUfkjNBiy8es5TYE',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '无人之岛',
+                    artist: '任然',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIELGft9EQqKJ9-n7ZyP5xpd6c0XSCiAAKQBQACSlxxR7RMlOp2r8WZNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '我怀念的',
+                    artist: '孙燕姿',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEMWft9MX6cDbe0bPYp93XxtWK_0xoAAKVBQACSlxxRzfOVfqauBZBNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '第一次',
+                    artist: '光良',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIENWft9SLVpYN4mZJAHwgPsQ81_O35AAKZBQACSlxxR4h7UeS5svKmNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '机器铃 砍菜刀',
+                    artist: '张维',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEPGft9egD4T_3yRQOq8DIQumbyfB4AAKfBQACSlxxR523n3zWXASbNgQ',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '雨爱',
+                    artist: '杨丞琳',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEQWft9kFK3qq_tPi2bMmzQwJUTsS9AAKkBQACSlxxR9BFzol2KQT_NgQ',
                     cover: 'covers/IMG_3541.gif'
                 }
             ]
