--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 },
                 {
                     name: '完美',
-                    artist: '王蓉'
+                    artist: '王蓉',
                     url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIESWft9247Qg18AdV42vfzXIcg7NXTAAKsBQACSlxxRyqTIdVprpfyNgQ',
                     cover: 'covers/IMG_3541.gif'
                 },
