--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             autoplay: true, // 自动播放
             loop: 'all', // 列表循环
             order: 'list', // 列表播放顺序
-            volume: 0.7, // 默认音量
-            listFolded: true, // 展开列表
+            volume: 0.6, // 默认音量
+            listFolded: false, // 展开列表
             listMaxHeight: '200px', // 限制最大高度
             audio: [
                 {
