--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             listMaxHeight: '200px', // 限制最大高度
             audio: [
                 {
+                    name: '天真的橡皮',
+                    artist: '浪子康',
+                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEUGfuAAE0qbgBo7aAvWoE8fmrYsq-ZgACsQUAAkpccUcyqHJHZnmtqjYE',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '示情',
                     artist: '范文芳',
                     url: 'music/范文芳 - 示情.mp3',
