--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '说书人',
+                    artist: '小沈阳',
+                    url: 'https://alist.bigbabyer.eu.org/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%B0%8F%E6%B2%88%E9%98%B3/%E5%B0%8F%E6%B2%88%E9%98%B3-%E8%AF%B4%E4%B9%A6%E4%BA%BA-%E3%80%8A%E8%AF%B4%E4%B9%A6%E4%BA%BA%E3%80%8B%E7%94%B5%E8%A7%86%E5%89%A7%E4%B8%BB%E9%A2%98%E6%9B%B2.mp3',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '学到老爱到老',
                     artist: '王先生',
                     url: 'music/王先生 – 学到老爱到老.flac',
