--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             listMaxHeight: '200px', // 限制最大高度
             audio: [
                 {
+                    name: '爸爸妈妈',
+                    artist: '王蓉',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89-%E7%88%B8%E7%88%B8%E5%A6%88%E5%A6%88.flac?sign=kSRZjX7ZUwOaBSeRrpiAXrypFNcHbsW0yuC2uBQSYaA=:0',
+                    cover: 'covers/IMG_3541.gif'
+                 },
+                {
                     name: '天真的橡皮',
                     artist: '浪子康',
                     url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEUGfuAAE0qbgBo7aAvWoE8fmrYsq-ZgACsQUAAkpccUcyqHJHZnmtqjYE',
