--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 {
                     name: '一个人生活',
                     artist: '范文芳',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIERWft9sBencZyIvUjCMkLUrtJuG26AAKoBQACSlxxRypqcaCJtj5dNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E8%8C%83%E6%96%87%E8%8A%B3/%E8%8C%83%E6%96%87%E8%8A%B3%20-%20%E4%B8%80%E4%B8%AA%E4%BA%BA%E7%94%9F%E6%B4%BB.mp3?sign=u9fUys80FTtRe0yXutN4gc8oBeLqPSTEEJzO6lvF1-8=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
