--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 {
                     name: '完美',
                     artist: '王蓉',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIESWft9247Qg18AdV42vfzXIcg7NXTAAKsBQACSlxxRyqTIdVprpfyNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89%20%E2%80%93%20%E5%AE%8C%E7%BE%8E.mp3?sign=Uk1CkaXZuuiBZ1rz2Mmntk6_sTvQBz3Q7kXObFjsoQg=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
