--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 {
                     name: '天真的橡皮',
                     artist: '浪子康',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEUGfuAAE0qbgBo7aAvWoE8fmrYsq-ZgACsQUAAkpccUcyqHJHZnmtqjYE',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%B5%AA%E5%AD%90%E5%BA%B7/%E6%B5%AA%E5%AD%90%E5%BA%B7%20%E2%80%93%20%E5%A4%A9%E7%9C%9F%E7%9A%84%E6%A9%A1%E7%9A%AE%EF%BC%88DJ%E7%89%88%EF%BC%89.mp3?sign=qLiffvE8idkK5FBEFsY8TLHWmacCtgjkMtFPTVoyeB0=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
