--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 {
                     name: '情人',
                     artist: '杜德伟',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIDzmft5S5rPStErUNOB1ncnUtweIX7AAI-BQACSlxxR1CBlB32qHBNNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9D%9C%E5%BE%B7%E4%BC%9F/%E6%9D%9C%E5%BE%B7%E4%BC%9F%20%E2%80%93%20%E6%83%85%E4%BA%BA.flac?sign=8sFkKt9Xr2olf1TAtPgWQobeHjlkEDUubkIBZ_qFFr4=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
