--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                 {
                     name: '舍得',
                     artist: '王唯旖',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID0mft512nmV4avnktCoyhV7GlIVzoAAJCBQACSlxxRwyByzyRDRv9NgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E5%94%AF%E6%97%96/%E7%8E%8B%E5%94%AF%E6%97%96%20%E2%80%93%20%E8%88%8D%E5%BE%97.flac?sign=x0Uvbd0BsG9nSuqxWl9ZWq8vZ1KC--3YmPVD3Bknfl4=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '无情画',
                     artist: '王唯旖',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID4Gft6OlW8T95mylrGlMw68Ng9GhNAAJOBQACSlxxR1sBhlbm1LjqNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E5%94%AF%E6%97%96/%E7%8E%8B%E5%94%AF%E6%97%96%20%E2%80%93%20%E6%97%A0%E6%83%85%E7%94%BB.flac?sign=TITrdN2LqtvoMgig7SWgIaI8qt-qib7U0UNtQ8XfbXQ=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
