--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 {
                     name: '九张机',
                     artist: '叶炫清',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID2Wft6BEpC3f1WUBFSuuGlg85sgABwwACSQUAAkpccUdKMc1T2x-AdTYE',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%8F%B6%E7%82%AB%E6%B8%85/%E5%8F%B6%E7%82%AB%E6%B8%85%20%E2%80%93%20%E4%B9%9D%E5%BC%A0%E6%9C%BA.flac?sign=m65mZnWq4heSOrwZ11PfpB6BMogzGLn-1kjK4SqlHN0=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
