--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 {
                     name: '诀别诗',
                     artist: '胡彦斌',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID9mft684_QP-zyMOcaU1u15Tw9vqaAAJPBQACvytxR8luIpQe1nY_NgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E8%83%A1%E5%BD%A6%E6%96%8C/%E8%AF%80%E5%88%AB%E8%AF%97%20-%20%E8%83%A1%E5%BD%A6%E6%96%8C.flac?sign=X7BxdpoB_XSAoAqz9X9kf1Ok6hxKXLKhqYaB2lzZU2k=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
