--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
                 {
                     name: '诉月',
                     artist: '刘惜君',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID4Gft6OlW8T95mylrGlMw68Ng9GhNAAJOBQACSlxxR1sBhlbm1LjqNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%88%98%E6%83%9C%E5%90%9B/%E5%88%98%E6%83%9C%E5%90%9B%20%E2%80%93%20%E8%AF%89%E6%9C%88.flac?sign=2T57zmzOQOoHutUkRXOZ3g2Q3RzAleeh0vRhavMQfhk=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '爱死了昨天',
                     artist: '李慧珍',
-                    url: 'https://image.cecily.eu.org:/d/BQACAgEAAxkDAAID7Wft6v83bcPdYPEe8P2ut6D_GsfWAAJZBQACSlxxRyqY1r3hWqWONgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9D%8E%E6%85%A7%E7%8F%8D/%E6%9D%8E%E6%85%A7%E7%8F%8D%20%E2%80%93%20%E7%88%B1%E6%AD%BB%E4%BA%86%E6%98%A8%E5%A4%A9%20(live).flac?sign=2RJ8DSU9xxgn27r6ku2oht9-q2Lv6qPG_zvDjWx2ZQo=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '分飞',
                     artist: '徐怀钰',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID8Wft60t7bCEMUJt9NqFuzyKY2X8RAAJcBQACSlxxR-29P8bYJprkNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%BE%90%E6%80%80%E9%92%B0/%E5%BE%90%E6%80%80%E9%92%B0%20%E2%80%93%20%E5%88%86%E9%A3%9E.flac?sign=ehGL3vYUqnndWMiFNkuPV6vSPCR5BK-8CuhVRlx8cyE=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
@@ -144,7 +144,7 @@
                 {
                     name: '搁浅',
                     artist: '周杰伦',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAID-mft7GGeeYTTp97kId3fROMZFEUQAAJiBQACSlxxR8G3WsEzQ6zgNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%91%A8%E6%9D%B0%E4%BC%A6/%E6%90%81%E6%B5%85%20-%20%E5%91%A8%E6%9D%B0%E4%BC%A6.flac?sign=ybMhIrU7uueatMjfWlyq9KffgpV6DJTT3HJMez-oxz4=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
