--- a/index.html
+++ b/index.html
@@ -150,43 +150,73 @@
                 {
                     name: 'The Bass',
                     artist: '巴巴的贝',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEAWft7N__4Ce5hG4Y9V-0m_ELEMlBAAJpBQACSlxxR_2PTxy6ws2DNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%B7%B4%E5%B7%B4%E7%9A%84%E8%B4%9D/%E5%B7%B4%E5%B7%B4%E7%9A%84%E8%B4%9D%20%E2%80%93%20%E5%B7%B4%E5%B7%B4%E8%B4%9D%E6%96%AFThe%20Bass%EF%BC%88%E6%91%87%E5%A4%B4%E7%89%88%EF%BC%89.flac?sign=5ly7rxyWyqvNqt7ZahJbF4ztD4-n50JoYBlrfAsjm5o=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '幻听',
                     artist: '许嵩',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEBWft7XELUeABLG_m3TNMNkcg8Y-LAAJtBQACSlxxR59skwWhAdjQNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E8%AE%B8%E5%B5%A9/%E8%AE%B8%E5%B5%A9%20%E2%80%93%20%E5%B9%BB%E5%90%AC.flac?sign=PGO1eObtGk2TZtQUrCSRobpHkFylni6boxUQ4g6rnvU=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '千百度',
+                    artist: '许嵩',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E8%AE%B8%E5%B5%A9/%E8%AE%B8%E5%B5%A9%20%E2%80%93%20%E5%8D%83%E7%99%BE%E5%BA%A6.flac?sign=bq9YY_dSC_-zM60J74ggj0CLWO3Hq4CTdgdthzpCZXY=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '浪人情歌',
                     artist: '伍佰',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIECWft7f5oyfRVnTYpykVZ2uVK7bipAAJxBQACSlxxR2vUHBl1IgABPjYE',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BC%8D%E4%BD%B0/%E4%BC%8D%E4%BD%B0%20%E2%80%93%20%E6%B5%AA%E4%BA%BA%E6%83%85%E6%AD%8C.flac?sign=ACOMTYcfe-WxqIPr7dnvpkSKT-QTvpWGfSwBFJS2CgA=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '泪桥',
+                    artist: '伍佰 & China Blue',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BC%8D%E4%BD%B0/%E4%BC%8D%E4%BD%B0%20%26%20China%20Blue%20%E2%80%93%20%E6%B3%AA%E6%A1%A5.flac?sign=qaS7fQqt4VrTr3gKq1cUMPhsoccboHjnj68bX_uoHac=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '孤单北半球',
                     artist: '欧得洋',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEDWft7mjOyyQT01Bk1sKVdX6yvXJuAAJ1BQACSlxxR4pDOvkTTBGnNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%AC%A7%E5%BE%97%E6%B4%8B/%E6%AC%A7%E5%BE%97%E6%B4%8B%20%E2%80%93%20%E5%AD%A4%E5%8D%95%E5%8C%97%E5%8D%8A%E7%90%83.flac?sign=oQ9F-lDULGnh8rFL6pwY40hVbGMCnnd71Xg0LqFWOyA=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '不谓侠',
                     artist: '萧忆情',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEEmft8V2nE1VbFVDULtAoSw6v6g4HAAJ6BQACSlxxRwjgYiMwaqNPNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E8%90%A7%E5%BF%86%E6%83%85/%E8%90%A7%E5%BF%86%E6%83%85Alex%20%E2%80%93%20%E4%B8%8D%E8%B0%93%E4%BE%A0.flac?sign=81ZlTTRVZcq9knwNYFM9j3y9v-pnv_iPL2QQq-_Z2dc=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '爱江山更爱美人',
                     artist: '李丽芬',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEF2ft8csoqHtzEdxddAq8ECWtVCIkAAJ_BQACSlxxR8RqeJ7Y6-uDNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9D%8E%E4%B8%BD%E8%8A%AC/%E6%9D%8E%E4%B8%BD%E8%8A%AC%20%E2%80%93%20%E7%88%B1%E6%B1%9F%E5%B1%B1%E6%9B%B4%E7%88%B1%E7%BE%8E%E4%BA%BA.flac?sign=YRY34I7zBKmSyAWcJ0wyY1J_JOVFcCZUuVbkuEjkGA4=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '美人鱼',
                     artist: '林俊杰',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEHGft8wVWvcMl-z3j_hR6E6lvFkcdAAKEBQACSlxxR4G8oYwHKEqyNgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9E%97%E4%BF%8A%E6%9D%B0/%E6%9E%97%E4%BF%8A%E6%9D%B0-%E7%BE%8E%E4%BA%BA%E9%B1%BC.flac?sign=qr6AtZTsyP1unpqHffx3ea018OcSjaAP-ONXPX2hZtM=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '达尔文',
+                    artist: '林俊杰',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9E%97%E4%BF%8A%E6%9D%B0/%E6%9E%97%E4%BF%8A%E6%9D%B0-%E8%BE%BE%E5%B0%94%E6%96%87.flac?sign=AnJ_wHailQE2t2dji1TvAXyYLz-zIUg1_K44-KAF-iA=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '背对背拥抱',
+                    artist: '林俊杰',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9E%97%E4%BF%8A%E6%9D%B0/%E6%9E%97%E4%BF%8A%E6%9D%B0-%E8%83%8C%E5%AF%B9%E8%83%8C%E6%8B%A5%E6%8A%B1.flac?sign=iscJMTv57OnP2PSNN3S-MkIOU4A5AoPhlkDmg2VpVuk=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '爱不会绝迹',
+                    artist: '林俊杰',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9E%97%E4%BF%8A%E6%9D%B0/%E6%9E%97%E4%BF%8A%E6%9D%B0-%E7%88%B1%E4%B8%8D%E4%BC%9A%E7%BB%9D%E8%BF%B9-%E3%80%8A%E6%81%90%E9%BE%99%E5%AE%9D%E8%B4%9D%E3%80%8B%E5%8A%A8%E7%94%BB%E7%89%87%E4%B8%BB%E9%A2%98%E6%9B%B2.flac?sign=qdawE7NyKtZw-M20UF_2n0XP0MohtbBx7d_AaCgyTk8=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
