--- a/index.html
+++ b/index.html
@@ -240,25 +240,25 @@
                 {
                     name: '我怀念的',
                     artist: '孙燕姿',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEMWft9MX6cDbe0bPYp93XxtWK_0xoAAKVBQACSlxxRzfOVfqauBZBNgQ',
+                    url: '',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '第一次',
                     artist: '光良',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIENWft9SLVpYN4mZJAHwgPsQ81_O35AAKZBQACSlxxR4h7UeS5svKmNgQ',
+                    url: '',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '机器铃 砍菜刀',
                     artist: '张维',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEPGft9egD4T_3yRQOq8DIQumbyfB4AAKfBQACSlxxR523n3zWXASbNgQ',
+                    url: '',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
                     name: '雨爱',
                     artist: '杨丞琳',
-                    url: 'https://image.cecily.eu.org/d/BQACAgEAAxkDAAIEQWft9kFK3qq_tPi2bMmzQwJUTsS9AAKkBQACSlxxR9BFzol2KQT_NgQ',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%9D%A8%E4%B8%9E%E7%90%B3/%E6%9D%A8%E4%B8%9E%E7%90%B3%20%E2%80%93%20%E9%9B%A8%E7%88%B1.flac?sign=7Q1KC_GCG8CohAVg2N1E_Pz6lpn8LXJk6cLbcZjeWmQ=:0',
                     cover: 'covers/IMG_3541.gif'
                 }
             ]
