--- a/index.html
+++ b/index.html
@@ -250,6 +250,30 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '开始懂了',
+                    artist: '孙燕姿',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%AD%99%E7%87%95%E5%A7%BF/%E5%BC%80%E5%A7%8B%E6%87%82%E4%BA%86%20-%20%E5%AD%99%E7%87%95%E5%A7%BF.flac?sign=K6HqxEsRQiKQtOsuAUPYTbLCo2M-_xVk7QCQE30JFCw=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '天黑黑',
+                    artist: '孙燕姿',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%AD%99%E7%87%95%E5%A7%BF/%E5%A4%A9%E9%BB%91%E9%BB%91%20-%20%E5%AD%99%E7%87%95%E5%A7%BF.flac?sign=SkEHp9Qc_iKsWP3eY0g0g4mFGMavEwRDa1fVjmWU0pU=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '逆光',
+                    artist: '孙燕姿',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%AD%99%E7%87%95%E5%A7%BF/%E9%80%86%E5%85%89%20-%20%E5%AD%99%E7%87%95%E5%A7%BF.flac?sign=4BC-xihUCfS4NYQt28nRIs1JnwephHv_uX7hffT7vaQ=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '绿光',
+                    artist: '孙燕姿',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%AD%99%E7%87%95%E5%A7%BF/%E7%BB%BF%E5%85%89%20-%20%E5%AD%99%E7%87%95%E5%A7%BF.flac?sign=BqLwNPE4186t40YpxcL_1M8q5J6GWvXZwQ6RLSP3LyQ=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '第一次',
                     artist: '光良',
                     url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%85%89%E8%89%AF/%E5%85%89%E8%89%AF%20%E2%80%93%20%E7%AC%AC%E4%B8%80%E6%AC%A1.flac?sign=NfEGhUq7BcVKdfMqQe8nTYRdS97aUUBXKTT8N_0dMJk=:0',
