--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
                 }
             ]
         });
+        
+        // 尝试播放
+    ap.play().catch(error => {
+        console.log('自动播放失败，可能需要用户交互');
+    });
+});
     </script>
 </body>
 </html>
