--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 {
                     name: '爸爸妈妈',
                     artist: '王蓉',
-                    url: 'https://alist.bigbabyer.eu.org/d/115/音乐索引/王蓉/王蓉-爸爸妈妈.flac?sign=kSRZjX7ZUwOaBSeRrpiAXrypFNcHbsW0yuC2uBQSYaA=:0',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89-%E7%88%B8%E7%88%B8%E5%A6%88%E5%A6%88.flac?sign=kSRZjX7ZUwOaBSeRrpiAXrypFNcHbsW0yuC2uBQSYaA=:0',
                     cover: 'covers/IMG_3541.gif'
                  },
                 {
