--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             listMaxHeight: '235px', // 限制最大高度
             audio: [
                 {
-                    name: '爸爸妈妈',
-                    artist: '王蓉',
-                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89-%E7%88%B8%E7%88%B8%E5%A6%88%E5%A6%88.flac?sign=kSRZjX7ZUwOaBSeRrpiAXrypFNcHbsW0yuC2uBQSYaA=:0',
+                    name: '下沙',
+                    artist: '游鸿明',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%B8%B8%E9%B8%BF%E6%98%8E/%E6%B8%B8%E9%B8%BF%E6%98%8E-%E4%B8%8B%E6%B2%99.flac?sign=RD4G_SNa1pvF8fqnNx37EAfes4IxQHPjnj2MWz5I3Es=:0',
                     cover: 'covers/IMG_3541.gif'
                  },
                 {
