--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                     cover: 'covers/IMG_3541.gif'
                  },
                 {
-                    name: '我不是黄蓉',
-                    artist: '王蓉',
-                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89-%E6%88%91%E4%B8%8D%E6%98%AF%E9%BB%84%E8%93%89.flac?sign=1eT46fIG45p5oszmRez2DdROHwU7R8Sy8pX-Xv8nrDo=:0',
+                    name: '阳光彩虹小白马',
+                    artist: '大张伟',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%A4%A7%E5%BC%A0%E4%BC%9F/%E5%A4%A7%E5%BC%A0%E4%BC%9F%20-%20%E9%98%B3%E5%85%89%E5%BD%A9%E8%99%B9%E5%B0%8F%E7%99%BD%E9%A9%AC.flac?sign=L0dT1Pl8kFUCMAkun2sW9KZ4eZ-N7vIWcb-T4ZlHLSM=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
-                    name: '小鸡小鸡',
-                    artist: '王蓉',
-                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%8E%8B%E8%93%89/%E7%8E%8B%E8%93%89-%E5%B0%8F%E9%B8%A1%E5%B0%8F%E9%B8%A1-%E3%80%8A%E8%BF%99%EF%BC%81%E5%B0%B1%E6%98%AF%E8%A1%97%E8%88%9E%E3%80%8B%E7%AC%AC%E4%BA%94%E6%9C%9F%E8%83%8C%E6%99%AF%E9%9F%B3%E4%B9%90%E4%B8%A8%E3%80%8A%E5%A4%9C%E5%B8%82%E4%BA%BA%E7%94%9F%E3%80%8B%E7%94%B5%E8%A7%86%E5%89%A7%E6%8F%92%E6%9B%B2.flac?sign=HMGBi859w952SzSQvj6F9HAyLqi31c3OTkSrjqjJSEY=:0',
+                    name: '你怎么舍得我难过',
+                    artist: '黄品源',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E9%BB%84%E5%93%81%E6%BA%90/50.%E4%BD%A0%E6%80%8E%E4%B9%88%E8%88%8D%E5%BE%97%E6%88%91%E9%9A%BE%E8%BF%87--%E9%BB%84%E5%93%81%E6%BA%90.wav?sign=IzfJ2LbmRYcfhMvcZlKJlennNSa_i1wHWfqYkigFdcY=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
