--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         const ap = new APlayer({
             container: document.getElementById('aplayer'),
             fixed: false, // 取消固定，支持自适应
-            autoplay: true, // 自动播放
+            autoplay: false, // 自动播放
             loop: 'all', // 列表循环
             order: 'list', // 列表播放顺序
             volume: 0.6, // 默认音量
