--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             listMaxHeight: '235px', // 限制最大高度
             audio: [
                 {
+                    name: 'I Hate Trot',
+                    artist: '任昌丁',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BB%BB%E6%98%8C%E4%B8%81/%E4%BB%BB%E6%98%8C%E4%B8%81%20%E2%80%93%20%E1%84%82%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB%20%E1%84%90%E1%85%B3%E1%84%85%E1%85%A9%E1%84%90%E1%85%B3%E1%84%80%E1%85%A1%20%E1%84%89%E1%85%B5%E1%86%B6%E1%84%8B%E1%85%A5%E1%84%8B%E1%85%AD.flac?sign=olu1VVRMwpPCC_P5-F4zJOpQ24SpHOZuJvqGN2Wzabw=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '请开门',
+                    artist: '任昌丁',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BB%BB%E6%98%8C%E4%B8%81/%E4%BB%BB%E6%98%8C%E4%B8%81%20%E2%80%93%20%E1%84%82%E1%85%A2%E1%84%80%E1%85%A1%20%E1%84%8C%E1%85%A5%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B3%E1%86%AB%20%E1%84%89%E1%85%A1%E1%84%85%E1%85%A1%E1%86%BC.mp3?sign=NeoZRGkAPfiMfLty2mY4cydipTVlEsX99WvL3DuyixY=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '下沙',
                     artist: '游鸿明',
                     url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E6%B8%B8%E9%B8%BF%E6%98%8E/%E6%B8%B8%E9%B8%BF%E6%98%8E-%E4%B8%8B%E6%B2%99.flac?sign=RD4G_SNa1pvF8fqnNx37EAfes4IxQHPjnj2MWz5I3Es=:0',
