--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             listMaxHeight: '235px', // 限制最大高度
             audio: [
                 {
+                    name: '夜的钢琴曲',
+                    artist: '石进',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E7%9F%B3%E8%BF%9B/%E7%9F%B3%E8%BF%9B-%E5%A4%9C%E7%9A%84%E9%92%A2%E7%90%B4%E6%9B%B2%E4%BA%94%20(%E9%92%A2%E7%90%B4%E6%9B%B2)-%E3%80%8A%E9%9D%9E%E8%AF%9A%E5%8B%BF%E6%89%B02%E3%80%8B%E7%94%B5%E5%BD%B1%E6%8F%92%E6%9B%B2.flac?sign=dKmSj6uow-ywFOEC5ApuQvm3yLjCm21LE2grI-RCciA=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: 'I Hate Trot',
                     artist: '任昌丁',
                     url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BB%BB%E6%98%8C%E4%B8%81/%E4%BB%BB%E6%98%8C%E4%B8%81%20%E2%80%93%20%E1%84%82%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB%20%E1%84%90%E1%85%B3%E1%84%85%E1%85%A9%E1%84%90%E1%85%B3%E1%84%80%E1%85%A1%20%E1%84%89%E1%85%B5%E1%86%B6%E1%84%8B%E1%85%A5%E1%84%8B%E1%85%AD.flac?sign=olu1VVRMwpPCC_P5-F4zJOpQ24SpHOZuJvqGN2Wzabw=:0',
