--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                     url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E4%BB%BB%E6%98%8C%E4%B8%81/%E4%BB%BB%E6%98%8C%E4%B8%81%20%E2%80%93%20%E1%84%82%E1%85%A2%E1%84%80%E1%85%A1%20%E1%84%8C%E1%85%A5%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B3%E1%86%AB%20%E1%84%89%E1%85%A1%E1%84%85%E1%85%A1%E1%86%BC.mp3?sign=NeoZRGkAPfiMfLty2mY4cydipTVlEsX99WvL3DuyixY=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
+                 {
+                    name: '突如其来的爱情',
+                    artist: '小田和正',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E9%9F%B3%E4%B9%90%E7%B4%A2%E5%BC%95/%E5%B0%8F%E7%94%B0%E5%92%8C%E6%AD%A3/%E5%B0%8F%E7%94%B0%E5%92%8C%E6%AD%A3-%E3%83%A9%E3%83%96%E3%83%BB%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AA%E3%83%BC%E3%81%AF%E7%AA%81%E7%84%B6%E3%81%AB.flac?sign=8Ontjwyw2EzlNH6ATO4AXNM39NuDRONkuurSjOJzu1Y=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
                 {
                     name: '下沙',
                     artist: '游鸿明',
